[package]
name = "tiny-gossip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bv = { version = "0.11.1", features = ["serde"] }
clap = "2.33.1"
crossbeam-channel = "0.5"
flate2 = "1.0"
indexmap = { version = "1.9", features = ["rayon"] }
itertools = "0.10.5"
log = "0.4.17"
lru = "0.7.7"
matches = "0.1.9"
num-traits = "0.2"
rand = "0.7.0"
rand_chacha = "0.2.2"
rayon = "1.5.3"
serde = "1.0.152"
serde_bytes = "0.11"
serde_derive = "1.0.103"
solana-bloom = { path = "../../diet-rpc-validator/bloom", version = "=1.15.0" }
solana-clap-utils = { path = "../../diet-rpc-validator/clap-utils", version = "=1.15.0" }
solana-client = { path = "../../diet-rpc-validator/client", version = "=1.15.0" }
solana-entry = { path = "../../diet-rpc-validator/entry", version = "=1.15.0" }
solana-frozen-abi = { path = "../../diet-rpc-validator/frozen-abi", version = "=1.15.0" }
solana-frozen-abi-macro = { path = "../../diet-rpc-validator/frozen-abi/macro", version = "=1.15.0" }
solana-ledger = { path = "../../diet-rpc-validator/ledger", version = "=1.15.0" }
solana-logger = { path = "../../diet-rpc-validator/logger", version = "=1.15.0" }
solana-measure = { path = "../../diet-rpc-validator/measure", version = "=1.15.0" }
solana-metrics = { path = "../../diet-rpc-validator/metrics", version = "=1.15.0" }
solana-net-utils = { path = "../../diet-rpc-validator/net-utils", version = "=1.15.0" }
solana-perf = { path = "../../diet-rpc-validator/perf", version = "=1.15.0" }
solana-rayon-threadlimit = { path = "../../diet-rpc-validator/rayon-threadlimit", version = "=1.15.0" }
solana-runtime = { path = "../../diet-rpc-validator/runtime", version = "=1.15.0" }
solana-sdk = { path = "../../diet-rpc-validator/sdk", version = "=1.15.0" }
solana-streamer = { path = "../../diet-rpc-validator/streamer", version = "=1.15.0" }
solana-thin-client = { path = "../../diet-rpc-validator/thin-client", version = "=1.15.0" }
solana-tpu-client = { path = "../../diet-rpc-validator/tpu-client", version = "=1.15.0", default-features = false }
solana-version = { path = "../../diet-rpc-validator/version", version = "=1.15.0" }
solana-vote-program = { path = "../../diet-rpc-validator/programs/vote", version = "=1.15.0" }
static_assertions = "1.1.0"
thiserror = "1.0"


[dev-dependencies]
num_cpus = "1.13.1"
regex = "1"
serial_test = "0.9.0"

[[bin]]
name = "tiny-gossip"
path = "src/main.rs"
