[package]
name = "tiny-gossip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bv = { version = "0.11.1", features = ["serde"] }
clap = "2.33.1"
crossbeam-channel = "0.5"
flate2 = "1.0"
indexmap = { version = "1.9", features = ["rayon"] }
itertools = "0.10.5"
log = "0.4.17"
lru = "0.7.7"
matches = "0.1.9"
num-traits = "0.2"
rand = "0.7.0"
rand_chacha = "0.2.2"
rayon = "1.5.3"
serde = "1.0.152"
serde_bytes = "0.11"
serde_derive = "1.0.103"
solana-bloom = { git = "https://github.com/tinydancer-io/diet-rpc-validator", version = "=1.15.0" }
solana-clap-utils = { git = "https://github.com/tinydancer-io/diet-rpc-validator", version = "=1.15.0" }
solana-client = { git = "https://github.com/tinydancer-io/diet-rpc-validator", version = "=1.15.0" }
solana-entry = { git = "https://github.com/tinydancer-io/diet-rpc-validator", version = "=1.15.0" }
solana-frozen-abi = { git = "https://github.com/tinydancer-io/diet-rpc-validator", version = "=1.15.0" }
solana-frozen-abi-macro = { git = "https://github.com/tinydancer-io/diet-rpc-validator", version = "=1.15.0" }
solana-ledger = { git = "https://github.com/tinydancer-io/diet-rpc-validator", version = "=1.15.0" }
solana-logger = { git = "https://github.com/tinydancer-io/diet-rpc-validator", version = "=1.15.0" }
solana-measure = { git = "https://github.com/tinydancer-io/diet-rpc-validator", version = "=1.15.0" }
solana-metrics = { git = "https://github.com/tinydancer-io/diet-rpc-validator", version = "=1.15.0" }
solana-net-utils = { git = "https://github.com/tinydancer-io/diet-rpc-validator", version = "=1.15.0" }
solana-perf = { git = "https://github.com/tinydancer-io/diet-rpc-validator", version = "=1.15.0" }
solana-rayon-threadlimit = { git = "https://github.com/tinydancer-io/diet-rpc-validator", version = "=1.15.0" }
solana-runtime = { git = "https://github.com/tinydancer-io/diet-rpc-validator", version = "=1.15.0" }
solana-sdk = { git = "https://github.com/tinydancer-io/diet-rpc-validator", version = "=1.15.0" }
solana-streamer = { git = "https://github.com/tinydancer-io/diet-rpc-validator", version = "=1.15.0" }
solana-thin-client = { git = "https://github.com/tinydancer-io/diet-rpc-validator", version = "=1.15.0" }
solana-tpu-client = { git = "https://github.com/tinydancer-io/diet-rpc-validator", version = "=1.15.0", default-features = false }
solana-version = { git = "https://github.com/tinydancer-io/diet-rpc-validator", version = "=1.15.0" }
solana-vote-program = { git = "https://github.com/tinydancer-io/diet-rpc-validator", version = "=1.15.0" }
static_assertions = "1.1.0"
thiserror = "1.0"


[dev-dependencies]
num_cpus = "1.13.1"
regex = "1"
serial_test = "0.9.0"

[[bin]]
name = "tiny-gossip"
git = "src/main.rs"
