[package]
name = "tiny-logger"
version = "1.16.0"
description = "A fork of Solana Logger for Tinydancer"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/tinydancer-io/tinydancer"
license = "Apache-2.0"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-logger"
edition = "2021"

[dependencies]
env_logger = "0.9.3"
lazy_static = "1.4.0"
log = "0.4.17"

[lib]
name = "tiny_logger"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]