[package]
name = "tinydancer"
version = "0.1.0"
edition = "2021"
default-run = "tinydancer"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.25.0", features=["full"] }
solana-ledger={git="https://github.com/tinydancer-io/diet-rpc-validator", branch="master"}
crossbeam = {version="0.8.2", features=["crossbeam-channel"]}
solana-sdk = "1.14.13"
reqwest = "0.11.14"
rayon = "1.6.1"
rand = "0.8.5"
itertools = "0.10.5"
async-trait = "0.1.64"
thiserror = "1.0.38"
tungstenite = "0.18.0"
tui = "0.19.0"
url="2.2.2"
serde="1.0.152"
serde_json="1.0.91"
serde_derive="1.0.152"
futures = "0.1.28"
crossterm = "0.26.0"
# diesel = { version = "2.0.3", features = ["sqlite"] }
# env_logger = "0.10.0"
# log = "0.4.17"
indexmap = { version = "1.9", features = ["rayon"] }
tiny-logger={path="../logger"}
solana-metrics="1.15.0"
solana-measure = "1.15.0"
clap = { version = "4.1.1", features = ["derive", "env"] }
semver = "1.0.16"
bincode = "1.3.3"
bitflags = "1.3.2"
lru = "0.9.0"
rand_chacha = "0.2.2"

[dependencies.rocksdb]
version = "0.19.0"
default-features = false
features = ["lz4"]
