[package]
name = "tinydancer"
version = "0.1.0"
edition = "2021"
default-run = "tinydancer"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.25.0", features=["full"] }
solana-ledger={git="https://github.com/tinydancer-io/diet-rpc-validator", branch="master"}
crossbeam = {version="0.8.2", features=["crossbeam-channel"]}
solana-sdk = {git="https://github.com/tinydancer-io/diet-rpc-validator", branch="master"}
reqwest = "0.11.14"
rayon = "1.6.1"
rand = "0.8.5"
itertools = "0.10.5"
async-trait = "0.1.64"
thiserror = "1.0.38"
tungstenite = "0.18.0"
tui = "0.19.0"
url="2.2.2"
serde="1.0.152"
serde_json="1.0.91"
serde_derive="1.0.152"
futures = "0.3.26"
crossterm = "0.26.0"
diesel = { version = "2.0.3", features = ["sqlite"] }
# env_logger = "0.10.0"
# log = "0.4.17"
# log4rs = "1.2.0"
tiny-logger={path="../logger"}
solana-metrics="1.15.0"
solana-measure = "1.15.0"
bs58 = "0.4.0"
base64 = "0.21.0"
bytes = "1.4.0"
anyhow = "1.0.69"
log = "0.4.17"
dotenv = "0.15.0"
clap = { version = "4.1.6", features = ["derive"] }
dashmap = "5.4.0"
const_env = "0.1.2"
jsonrpsee = { version = "0.16.2", features = ["macros", "full"] }
solana-rpc-client = { git = "https://github.com/tinydancer-io/diet-rpc-validator", branch="master" }
solana-rpc-client-api= { git = "https://github.com/tinydancer-io/diet-rpc-validator", branch="master" }
solana-pubsub-client = { git = "https://github.com/tinydancer-io/diet-rpc-validator", branch="master" }
solana-tpu-client = {git = "https://github.com/tinydancer-io/diet-rpc-validator", branch="master" }
solana-quic-client = { git = "https://github.com/tinydancer-io/diet-rpc-validator", branch="master" }
solana-version = { git = "https://github.com/tinydancer-io/diet-rpc-validator", branch="master" }
solana-transaction-status = { git = "https://github.com/tinydancer-io/diet-rpc-validator", branch="master" }
solana-client = { git = "https://github.com/tinydancer-io/diet-rpc-validator", branch="master" }
prometheus="0.13.3"
postgres-native-tls = "0.5.0"
lazy_static = "1.4.0"
async-channel = "1.8.0"
tracing-subscriber = "0.3.16"
tokio-postgres = "0.7.7"
bincode = "1.3.3"
native-tls = "0.2.11"

[dependencies.rocksdb]
version = "0.19.0"
default-features = false
features = ["lz4"]