[package]
name = "tinydancer"
version = "0.0.1"
edition = "2021"
default-run = "tinydancer"
authors = ["Anoushk Kharangate <kharangateanoushk04@email.com>"]
license = "MIT OR Apache-2.0"
description = "A light client for the solana blockchain "
readme = "../readme.md"
homepage = "https://docs.tinydancer.io"
repository = "https://github.com/tinydancer-io/half-baked-client"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities","blockchain"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.25.0", features=["full"] }
solana-ledger={git="https://github.com/tinydancer-io/diet-rpc-validator", branch="master",version="=1.15.0" }
solana-rpc-client = {git="https://github.com/tinydancer-io/diet-rpc-validator", branch="master",version="=1.15.0" }
solana-rpc-client-api = {git="https://github.com/tinydancer-io/diet-rpc-validator", branch="master",version="=1.15.0" }
solana-client = {git="https://github.com/tinydancer-io/diet-rpc-validator", branch="master",version="=1.15.0" }
solana-sdk = {git="https://github.com/tinydancer-io/diet-rpc-validator", branch="master",version="=1.15.0" }
solana-tpu-client = {git="https://github.com/tinydancer-io/diet-rpc-validator", branch="master",version="=1.15.0" }
solana-version= {git="https://github.com/tinydancer-io/diet-rpc-validator", branch="master",version="=1.15.0" }
solana-quic-client = {git="https://github.com/tinydancer-io/diet-rpc-validator", branch="master",version="=1.15.0" }
solana-transaction-status = {git="https://github.com/tinydancer-io/diet-rpc-validator", branch="master",version="=1.15.0" }
crossbeam = {version="0.8.2", features=["crossbeam-channel"]}
reqwest = "0.11.14"
rayon = "1.6.1"
rand = "0.8.5"
itertools = "0.10.5"
async-trait = "0.1.64"
thiserror = "1.0.38"
tungstenite = "0.18.0"
tui = "0.19.0"
url="2.2.2"
bs58 = "0.4.0"
base64 = "0.21.0"
serde="1.0.152"
serde_json="1.0.91"
const_env = "0.1.2"
lazy_static = "1.4.0"
dashmap = "5.4.0"
bincode = "1.3.3"
dotenv = "0.15.0"
anyhow = "1.0.69"
prometheus = "0.13.3"
serde_derive="1.0.152"
jsonrpsee = { version = "0.16.2", features = ["macros", "full"] }
futures = "0.3.26"
async-channel = "1.8.0"
tracing-subscriber = "0.3.16"
crossterm = "0.26.0"
# diesel = { version = "2.0.3", features = ["sqlite"] }
# env_logger = "0.10.0"
# log = "0.4.17"
# log4rs = "1.2.0"
spinoff = { version = "0.7.0", features = ["dots", "arc", "line"] }
tiny-logger={path="../logger", version="1.16.0"}
solana-metrics="1.15.0"
solana-measure = "1.15.0"
clap = { version = "3.2.23", features = ["derive", "env"] }
tower-http = { version = "0.4.0", features = ["full"] }
hyper = "0.14.25"
tower = "0.4.13"
home = "0.5.4"
# colored = "2.0.0"
# ctrlc = "3.2.5"

[dependencies.rocksdb]
version = "0.19.0"
default-features = false
features = ["lz4"]
